src/components/notifications/notifications.component.scss
.notifications {
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 50;
    position: fixed;
    pointer-events: none;

    &__list {
        width: 100%;
        display: block;
        margin: 0 auto;
        padding: 0 20px;
        max-width: 420px;
        position: relative;
    }

    &__wrapper {
        margin: 0;
        padding: 0;
    }

    &__item {
        margin: 10px;
        display: flex;
        color: #ffffff;
        font-size: 15px;
        overflow: hidden;
        font-weight: 500;
        padding: 10px 12px;
        border-radius: 4px;
        align-items: center;
        border: 1px solid #0c6ebe;
        will-change: opacity, transform;
        background: #007ee5 linear-gradient(#168add, #007ee5);

        &--success {
            border: 1px solid #388e3c;
            background: #43a047 linear-gradient(#4caf50, #43a047);
        }
        &--error {
            border: 1px solid #941414;
            background: #be2c2c linear-gradient(#ca2d2d, #be2c2c);
        }
    }

    &__icon { font-size: 24px; margin-right: 12px; }
}

